--- a/static/style.css
+++ b/static/style.css
@@ -202,7 +202,7 @@ nav {
 }
 
 .nav-list a.navhome{
-  background-color: #f1502f;
+  background-color: #2d68f0;
   color: white;
 }
 
@@ -235,7 +235,7 @@ nav {
 }
 
 .sub-nav-list a.navhome{
-  background-color: #f1502f;
+  background-color: #2d68f0;
   color: white;
 }
 
